--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/FeatureDevMode.FeatureDevMode
+EditorStartupMap=/Game/Maps/FeatureDevMode.FeatureDevMode
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
