Added all BP classes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/FeatureDevMode.FeatureDevMode
 EditorStartupMap=/Game/Maps/FeatureDevMode.FeatureDevMode
+GlobalDefaultGameMode=/Game/GameMode/BP_BaseGameMode.BP_BaseGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
